# harmonic-relic-foundry

./: .gitignore  CMakeLists.txt  README.md  build.sh  install_requirements.sh  requirements-build.txt  requirements-runtime.txt  run.sh
docs/: algorithms.md  methods.md  technical-architecture.md
scripts/: render_gallery.sh  setup_env.sh
src/: exploration_controls.f90  field_simulation.f90  gl_bridge.c  main.f90  platform_gl.f90  relic_rules.f90  relic_state.f90
